@@ -6,6 +6,8 @@ ubiquity (2.4.1) UNRELEASED; urgency=low
     before the former is ready.
   * Fix a crash in the KDE partitioning page when no partitions are
     available for resizing (LP: #644407).
+  * Call setgroups() when raising and dropping privileges.  Thanks Colin
+    Watson!
 
  -- Evan Dandrea <evand@ubuntu.com>  Tue, 21 Sep 2010 15:51:27 +0100
 
